--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,213 @@
-body
+/*-----Generale-----*/
+*
 {
-    background: red;
+    margin: 0;
+    padding: 0;
 }
+
+a, a:hover, a:visited, a:active
+{
+	text-decoration: none;
+}
+
+/*-----Bandeau Haut-----*/
+header
+{
+    text-align: center;
+    width: 100%;
+    background-color: rgb(85, 196, 162);
+    height: 80px;
+    padding-top: 0,9%;
+    font-size: 190%;
+}
+h1
+{
+    color: rgb(248, 205, 63);
+}
+
+
+/*-----Corps du site-----*/
+#menu1menu2
+{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 80px;
+    height: 500px;
+    margin-top: 5%;
+    font-size: 200%;
+}
+#menu3menu4
+{
+    display: flex;
+    justify-content: space-around;
+    height: 500px;
+    margin-bottom: 10%;
+    font-size: 200%;
+}
+#Menu1
+{
+    border-width: 0px;
+    box-shadow: 1px 1px 12px #555;
+    width: 35%;
+    text-align: center;
+    background-color: rgb(253, 220, 225);
+    padding-top: 10%;
+    transform: scale(1);
+    transition: transform 400ms;
+    &:hover 
+    {
+        transform: scale(1.15);
+    }
+}
+#Menu2
+{
+    border-width: 0px;
+    box-shadow: 1px 1px 12px #555;
+    width: 35%;
+    text-align: center;
+    background-color: rgb(252, 239, 241);
+    padding-top: 13%;
+    transform: scale(1);
+    transition: transform 400ms;
+    &:hover 
+    {
+        transform: scale(1.15);
+    }
+}
+#Menu3
+{
+    border-width: 0px;
+    box-shadow: 1px 1px 12px #555;
+    width: 35%;
+    text-align: center;
+    background-color: rgb(214, 214, 214);
+    padding-top: 13%;
+    transform: scale(1);
+    transition: transform 400ms;
+    &:hover 
+    {
+        transform: scale(1.15);
+    }
+}
+#Menu4
+{
+    border-width: 0px;
+    box-shadow: 1px 1px 12px #555;
+    width: 35%;
+    text-align: center;
+    padding-top: 13%;
+    transform: scale(1);
+    transition: transform 400ms;
+    &:hover 
+    {
+        transform: scale(1.15);
+    }
+}
+.texte1
+{
+    padding-top: 5%;
+    color: rgb(85, 61, 30);
+}
+.texte2
+{
+    padding-top: 5%;
+    color: rgb(243, 180, 43);
+}
+.texte3
+{
+    padding-top: 5%;
+    color: rgb(49, 132, 226);
+}
+.texte4
+{
+    padding-top: 5%;
+    color: rgb(1, 155, 1);
+}
+.titremenu1
+{
+    color: rgb(85, 61, 30); 
+}
+.titremenu2
+{
+    background-image: -webkit-linear-gradient(to right, rgb(243, 180, 43), rgb(147, 82, 231));
+    background-image: linear-gradient(to right, rgb(243, 180, 43), rgb(147, 82, 231));
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+.titremenu3
+{
+    background-image: -webkit-linear-gradient(to right, rgb(33, 30, 228), rgb(63, 192, 252));
+    background-image: linear-gradient(to right, rgb(33, 30, 228), rgb(63, 192, 252));
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+.titremenu4
+{
+    background-image: -webkit-linear-gradient(to right, rgb(0, 128, 0), rgb(165, 255, 113));
+    background-image: linear-gradient(to right, rgb(0, 128, 0), rgb(165, 255, 113));
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+i
+{
+    font-size: 130%;
+    background-image: -webkit-linear-gradient(to right, rgb(218, 27, 2), rgb(230, 139, 20));
+    background-image: linear-gradient(to right, rgb(218, 27, 2), rgb(230, 139, 20));
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+
+/*-----Prochainement-----*/
+article
+{
+    text-align: center;
+    background-color: rgb(85, 196, 162);
+    margin-bottom: 8%;
+    font-size: 200%;
+    width: 35%;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.prochainement
+{
+    color: rgb(248, 205, 63);
+    font-size: 150%;
+}
+
+
+/*-----Bandeau bas-----*/
+footer
+{
+    background-color: rgb(85, 196, 162);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 200%;
+}
+.mentions
+{
+    color: rgb(248, 205, 63);
+    margin-left: 15%;
+    width: 400px;
+}
+.contact
+{
+    color: rgb(248, 205, 63);
+    margin-right: 15%;
+    width: 300px;
+}
+
+
+
+
