--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-/*-----Generale-----*/
+/*--------------------Generale--------------------
+--------------------------------------------------
+--------------------------------------------------
+--------------------------------------------------*/
 * {
   margin: 0;
   padding: 0;
@@ -8,8 +11,11 @@ a, a:hover, a:visited, a:active {
   text-decoration: none;
 }
 
-/*-----Bandeau Haut-----*/
-header {
+/*--------------------Bandeau Haut----------------
+--------------------------------------------------
+--------------------------------------------------
+--------------------------------------------------*/
+.bandeautitre {
   text-align: center;
   width: 100%;
   background-color: #45a186;
@@ -18,81 +24,84 @@ header {
   font-size: 190%;
 }
 
-h1 {
+.titre {
   color: #f8cd3f;
 }
 
-/*-----Corps du site-----*/
-#menu1menu2 {
+/*--------------------Corps du site---------------
+--------------------------------------------------
+--------------------------------------------------
+--------------------------------------------------*/
+#menu1234 {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  margin-bottom: 80px;
-  height: 500px;
   margin-top: 5%;
+  margin-bottom: 5%;
   font-size: 200%;
+  text-align: center;
 }
 
-#menu3menu4 {
+#transform {
+  height: 600px;
+  width: 500px;
+  box-shadow: 1px 1px 12px #686767;
   display: flex;
-  justify-content: space-around;
-  height: 500px;
-  margin-bottom: 10%;
-  font-size: 200%;
+  justify-content: center;
+  align-items: center;
+}
+
+.background1 {
+  background-color: #fddce1;
+}
+
+.background2 {
+  background-color: #fceff1;
+}
+
+.background3 {
+  margin-top: 5%;
+  background-color: #dbdbdb;
+}
+
+.background4 {
+  margin-top: 5%;
 }
 
 #Menu1 {
-  border-width: 0px;
-  box-shadow: 1px 1px 12px #555;
-  width: 35%;
-  text-align: center;
-  background-color: #fddce1;
-  padding-top: 10%;
   transform: scale(1);
   transition: transform 400ms;
 }
 #Menu1:hover {
-  transform: scale(1.15);
+  transform: scale(1.5);
+  opacity: 0.5;
 }
 
 #Menu2 {
-  border-width: 0px;
-  box-shadow: 1px 1px 12px #555;
-  width: 35%;
-  text-align: center;
-  background-color: #fceff1;
-  padding-top: 13%;
   transform: scale(1);
   transition: transform 400ms;
 }
 #Menu2:hover {
-  transform: scale(1.15);
+  transform: scale(1.5);
+  opacity: 0.5;
 }
 
 #Menu3 {
-  border-width: 0px;
-  box-shadow: 1px 1px 12px #555;
-  width: 35%;
-  text-align: center;
-  background-color: #d6d6d6;
-  padding-top: 13%;
   transform: scale(1);
   transition: transform 400ms;
 }
 #Menu3:hover {
-  transform: scale(1.15);
+  transform: scale(1.5);
+  opacity: 0.5;
 }
 
 #Menu4 {
-  border-width: 0px;
-  box-shadow: 1px 1px 12px #555;
-  width: 35%;
-  text-align: center;
-  padding-top: 13%;
   transform: scale(1);
   transition: transform 400ms;
 }
 #Menu4:hover {
-  transform: scale(1.15);
+  transform: scale(1.5);
+  opacity: 0.5;
 }
 
 .texte1 {
@@ -152,7 +161,10 @@ i {
   -webkit-background-clip: text;
 }
 
-/*-----Prochainement-----*/
+/*--------------------Prochainement--------------------
+-------------------------------------------------------
+-------------------------------------------------------
+-------------------------------------------------------*/
 article {
   text-align: center;
   background-color: #45a186;
@@ -169,8 +181,11 @@ article {
   font-size: 150%;
 }
 
-/*-----Bandeau bas-----*/
-footer {
+/*--------------------Bandeau bas--------------------
+-------------------------------------------------------
+-------------------------------------------------------
+-------------------------------------------------------*/
+.bandeaufooter {
   background-color: #45a186;
   position: fixed;
   bottom: 0;
@@ -186,13 +201,287 @@ footer {
 .mentions {
   color: #f8cd3f;
   margin-left: 15%;
-  width: 400px;
+  width: 300px;
 }
 
+.mentions:hover {
+  animation: thing 0.1s ease-in-out 0.1s infinite alternate;
+}
+
+@keyframes thing {
+  from {
+    transform: rotate(10deg);
+  }
+  to {
+    transform: rotate(-10deg);
+    transform-origin: center center;
+  }
+}
 .contact {
   color: #f8cd3f;
   margin-right: 15%;
   width: 300px;
 }
+
+.contact:hover {
+  animation: thing1 0.1s ease-in-out 0.1s infinite alternate;
+}
+
+@keyframes thing1 {
+  from {
+    transform: rotate(10deg);
+  }
+  to {
+    transform: rotate(-10deg);
+    transform-origin: center center;
+  }
+}
+/* --------------------ALL MENU------------------------
+-------------------------------------------------------
+-------------------------------------------------------
+------------------------------------------------------- */
+#groupetrait {
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  margin-bottom: 3%;
+}
+
+.textmenu {
+  text-align: left;
+  margin: 0 auto;
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* --------------------MENU 1--------------------------
+-------------------------------------------------------
+-------------------------------------------------------
+------------------------------------------------------- */
+.trait1menu1 {
+  border-top: 4px solid #553d1e;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu1 {
+  border-top: 4px solid #553d1e;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.titresousmenu1 {
+  margin-top: -13px;
+  color: #553d1e;
+}
+
+.backgroundmenu1 {
+  background-color: #fddce1;
+}
+
+.titremenu1bis {
+  text-align: center;
+  margin-top: 5%;
+  color: #553d1e;
+}
+
+.colortextmenu1 {
+  color: #553d1e;
+}
+
+/*-----Footer-----*/
+.pieddepage {
+  text-align: center;
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
+/* --------------------MENU 2--------------------------
+-------------------------------------------------------
+-------------------------------------------------------
+------------------------------------------------------- */
+.colortext1menu2 {
+  color: #f3b42b;
+}
+
+.colortext2menu2 {
+  color: #9352e7;
+}
+
+.colortext3menu2 {
+  color: #4e43e9;
+}
+
+.trait1menu2- {
+  border-top: 4px solid #f3b42b;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu2- {
+  border-top: 4px solid #f3b42b;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.trait1menu2-- {
+  border-top: 4px solid #9352e7;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu2-- {
+  border-top: 4px solid #9352e7;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.trait1menu2--- {
+  border-top: 4px solid #4e43e9;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu2--- {
+  border-top: 4px solid #4e43e9;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.titresousmenu2- {
+  margin-top: -13px;
+  color: #f3b42b;
+}
+
+.titresousmenu2-- {
+  margin-top: -13px;
+  color: #9352e7;
+}
+
+.titresousmenu2--- {
+  margin-top: -13px;
+  color: #4e43e9;
+}
+
+.backgroundmenu2 {
+  background-color: #fceff1;
+}
+
+.titremenu2bis {
+  text-align: center;
+  margin-top: 5%;
+  background-image: -webkit-linear-gradient(to right, #f3b42b, #9352e7);
+  background-image: linear-gradient(to right, #f3b42b, #9352e7);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+/* --------------------MENU 3--------------------------
+-------------------------------------------------------
+-------------------------------------------------------
+------------------------------------------------------- */
+.trait1menu3- {
+  border-top: 4px solid #211ee4;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu3- {
+  border-top: 4px solid #211ee4;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.trait1menu3-- {
+  border-top: 4px solid #3f81fc;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu3-- {
+  border-top: 4px solid #3f81fc;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.trait1menu3--- {
+  border-top: 4px solid #3fc0fc;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu3--- {
+  border-top: 4px solid #3fc0fc;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.titresousmenu3 {
+  margin-top: -13px;
+}
+
+.backgroundmenu3 {
+  background-color: #dbdbdb;
+}
+
+.titremenu3bis {
+  text-align: center;
+  margin-top: 5%;
+  background-image: -webkit-linear-gradient(to right, #211ee4, #3fc0fc);
+  background-image: linear-gradient(to right, #211ee4, #3fc0fc);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+/* --------------------MENU 4--------------------------
+-------------------------------------------------------
+-------------------------------------------------------
+------------------------------------------------------- */
+.trait1menu4 {
+  border-top: 4px solid black;
+  width: 20%;
+  margin-right: 10px;
+}
+
+.trait2menu4 {
+  border-top: 4px solid black;
+  width: 20%;
+  margin-left: 10px;
+}
+
+.titresousmenu4 {
+  margin-top: -13px;
+}
+
+.titremenu4bis {
+  text-align: center;
+  margin-top: 5%;
+  background-image: -webkit-linear-gradient(to right, green, #a5ff71);
+  background-image: linear-gradient(to right, green, #a5ff71);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+/* --------------------MENTIONS LEGALES--------------------
+-----------------------------------------------------------
+-----------------------------------------------------------
+----------------------------------------------------------- */
+/* --------------------MEDIA 1000px--------------------
+-------------------------------------------------------
+-------------------------------------------------------
+------------------------------------------------------- */
+@media all and (max-width: 1000px) {
+  .background2 {
+    margin-top: 5%;
+  }
+}
+/* --------------------MEDIA 800px--------------------
+-------------------------------------------------------
+-------------------------------------------------------
+------------------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
